add sample reports

--- a/flight-report/UI/index.html
+++ b/flight-report/UI/index.html
@@ -1,4 +1,15 @@
-<html>
+
+
+<!DOCTYPE html>
+<h1>Flight reports</h1>
+<a href="la_airport_cargo_volume.php">LA airport cargo volume</a>
+<br>
+<a href="la_flight_op_by_month.php">LA Flight Operations by month</a>
+<br>
+<a href="form.php">This is a same pie chart</a>
+
+
+<!-- <html>
 <body>
 
 <form action="form.php" method="post">
@@ -9,3 +20,30 @@ column name: <input type="text" name="column1"><br>
 
 </body>
 </html>
+ -->
+
+<!-- <html>
+<body>
+ <script type="text/javascript">
+
+    function submitAction(act) {
+         document.sample.action = act;
+         document.sample.submit();
+
+    }
+    </script>
+
+<form method="post" action="form.php">
+  <select name="taskOption">
+    <option value="weekely_task">weekly task</option>
+    <option value="second">Second</option>
+    <option value="third">Third</option>
+  </select>
+  <input type="submit" value="Submit the form"/>
+</form>
+<html>
+
+
+
+
+<body> -->
