add more reports

--- a/flight-report/UI/index.html
+++ b/flight-report/UI/index.html
@@ -2,12 +2,35 @@
 
 <!DOCTYPE html>
 <h1>Flight reports</h1>
-<a href="la_airport_cargo_volume.php">LA airport cargo volume</a>
+
+<input type="button" onclick="location.href='la_airport_cargo_volume.php';" value="LA airport cargo volume" />
+<br>
+<input type="button" onclick="location.href='la_flight_op_by_month.php';" value="LA Flight Operations by month" />
+<br>
+<input type="button" onclick="location.href='la_flight_passenger_count_by_carriertype.php';" value="LA Flight passenger by carrier type" />
+<br>
+<input type="button" onclick="location.href='la_flight_pessenger_trafic_by_term.php';" value="LA Flight passenger by terminal" />
+<br>
+<input type="button" onclick="location.href='sfo_airtraffic_landing_stats.php';" value="SFO air traffic landing stats" />
+<br>
+<input type="button" onclick="location.href='SFO_noise_excedence.php';" value="SFO noise excedence stats" />
+<br>
+<input type="button" onclick="location.href='form.php';" value="This is a same pie chart" />
+<br>
+
+<!-- <a href="la_airport_cargo_volume.php">LA airport cargo volume</a>
 <br>
 <a href="la_flight_op_by_month.php">LA Flight Operations by month</a>
 <br>
-<a href="form.php">This is a same pie chart</a>
-
+<a href="la_flight_passenger_count_by_carriertype.php">LA Flight passenger by carrier type</a>
+<br>
+<a href="la_flight_pessenger_trafic_by_term.php">LA Flight passenger by terminal</a>
+<br>
+<a href="sfo_airtraffic_landing_stats.php">SFO air traffic landing stats</a>
+<br>
+<a href="SFO_noise_excedence.php">SFO noise excedence stats</a>
+<br>
+<a href="form.php">This is a same pie chart</a> -->
 
 <!-- <html>
 <body>
