add another report

--- a/flight-report/UI/index.html
+++ b/flight-report/UI/index.html
@@ -15,58 +15,5 @@
 <br>
 <input type="button" onclick="location.href='SFO_noise_excedence.php';" value="SFO noise excedence stats" />
 <br>
-<input type="button" onclick="location.href='form.php';" value="This is a same pie chart" />
+<input type="button" onclick="location.href='SFO_noise_excedence_pie.php';" value="SFO noise excedence" />
 <br>
-
-<!-- <a href="la_airport_cargo_volume.php">LA airport cargo volume</a>
-<br>
-<a href="la_flight_op_by_month.php">LA Flight Operations by month</a>
-<br>
-<a href="la_flight_passenger_count_by_carriertype.php">LA Flight passenger by carrier type</a>
-<br>
-<a href="la_flight_pessenger_trafic_by_term.php">LA Flight passenger by terminal</a>
-<br>
-<a href="sfo_airtraffic_landing_stats.php">SFO air traffic landing stats</a>
-<br>
-<a href="SFO_noise_excedence.php">SFO noise excedence stats</a>
-<br>
-<a href="form.php">This is a same pie chart</a> -->
-
-<!-- <html>
-<body>
-
-<form action="form.php" method="post">
-Table name: <input type="text" name="table_name"><br>
-column name: <input type="text" name="column1"><br>
-<input type="submit">
-</form>
-
-</body>
-</html>
- -->
-
-<!-- <html>
-<body>
- <script type="text/javascript">
-
-    function submitAction(act) {
-         document.sample.action = act;
-         document.sample.submit();
-
-    }
-    </script>
-
-<form method="post" action="form.php">
-  <select name="taskOption">
-    <option value="weekely_task">weekly task</option>
-    <option value="second">Second</option>
-    <option value="third">Third</option>
-  </select>
-  <input type="submit" value="Submit the form"/>
-</form>
-<html>
-
-
-
-
-<body> -->
